Fixing mailing list submit form on mobile

--- a/src/app/_components/mailing-list/mailing-list.component.scss
+++ b/src/app/_components/mailing-list/mailing-list.component.scss
@@ -8,7 +8,7 @@ input.email {
   float: left;
   width: 30%;
   @include respond-to('small') {
-    width: 300px;
+    width: 100%;
   }
   height: 40px;
   padding: 7px;
@@ -17,9 +17,18 @@ input.email {
 input.button {
   text-transform: uppercase;
   margin-left: 10px;
+  @include respond-to('small') {
+    margin-top: 5px;
+    margin-left: 0px;
+  }
   padding: 5px 15px;
   height: 40px;
   float: left;
+
+  @include respond-to('small') {
+    float: none;
+    width: 100%;
+  }
 }
 
 #mc_embed_signup {
